# MiningForHumanity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
DonationMining/: CMakeLists.txt
DonationMining/Resources/: resources.qrc
DonationMining/deploy/: deploy.py
DonationMining/src/: BlurLayer.h  BurgerButton.cpp  BurgerButton.h  BurgerMenu.cpp  BurgerMenu.h  Frame.h  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MinerManager.cpp  MinerManager.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  StackedWidget.h  main.cpp
MiningForHumanity/: CMakeLists.txt
MiningForHumanity/Resources/: resources.qrc
MiningForHumanity/deploy/: deploy.py
MiningForHumanity/src/: AbstractTableModel.hpp  BlurLayer.hpp  BurgerButton.cpp  BurgerButton.hpp  BurgerMenu.cpp  BurgerMenu.h  BurgerMenu.hpp  Campaign.hpp  CampaignImageWidget.hpp  CategoryLabel.hpp  Dashboard.cpp  Dashboard.h  Dashboard.hpp  Dashboard.ui  DropDownMenu.cpp  DropDownMenu.h  DropDownMenu.hpp  LanguageButtons.cpp  LanguageButtons.h  LanguageButtons.hpp  LoginWidget.cpp  LoginWidget.h  LoginWidget.hpp  LoginWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MainWindow.ui  MinerManager.cpp  MinerManager.h  Ribbon.hpp  Ribbon.ui  SettingsWindow.ui  ToolBar.cpp  ToolBar.h  ToolBar.hpp  ToolBar.ui  globals.hpp  main.cpp
MiningForHumanity/translations/: MiningForHumanity_de.ts  MiningForHumanity_en.ts  MiningForHumanity_fr.ts  translations.qrc
src/: MainWindow.ui
